Game results are grouped in the Results class

--- a/JS/NetCore/wwwroot/index.html
+++ b/JS/NetCore/wwwroot/index.html
@@ -33,7 +33,7 @@
         </div>
 
     </div><!-- /.container -->
-
+    <script type="text/javascript" src="scripts/rpsls.results.js"></script>
     <script type="text/javascript" src="scripts/rpsls.shapes.js"></script>
     <script type="text/javascript" src="scripts/rpsls.zsg.rule.js"></script>
     <script type="text/javascript" src="scripts/rpsls.rules.js"></script>
